1-4Update index.html

--- a/index.html
+++ b/index.html
@@ -104,78 +104,79 @@
     </div>
     <script>
         const insects = {
-            Wespen: [
-               
-                { images: ["deutsche_wespe.jpg"], name: "Deutsche Wespe", development: "holometabol" },
-                { images: ["gemeine_wespe.jpg"], name: "Gemeine Wespe", development: "holometabol" },
-                { images: ["Saechsische_wespe.jpg"], name: "Sächsische Wespe", development: "holometabol" },
-                { images: ["feldwespe.jpg", "feldwespe2.jpg"], name: "Feldwespe", development: "holometabol" },
-            ],
-            Käfer: [
-                { images: ["reismehlkaefer.jpg"], name: "Reismehlkäfer", development: "holometabol" },
-                { images: ["brotkaefer.jpg"], name: "Brotkäfer", development: "holometabol" },
-                { images: ["mehlkaefer.jpg"], name: "Mehlkäfer", development: "holometabol" },
-                { images: ["getreideplattkaefer.jpg"], name: "Getreideplattkäfer", development: "holometabol" },
-                { images: ["kornkaefer.jpg"], name: "Kornkäfer", development: "holometabol" },
-                { images: ["reiskaefer.jpg"], name: "Reiskäfer", development: "holometabol" },
-                { images: ["gemeiner_nagekaefer.jpg"], name: "Gemeiner Nagekäfer", development: "holometabol" },
-                { images: ["wollkrautbluetenkaefer.jpg"], name: "Wollkrautblütenkäfer", development: "holometabol" },
-                { images: ["wollkrautbluetenkaefer_larve.jpg"], name: "Wollkrautblütenkäfer Larve", development: "holometabol" },
-                { images: ["hausbock.jpg"], name: "Hausbock", development: "holometabol" },
-                { images: ["getreidekapuziner.jpg"], name: "Getreidekapuziner", development: "holometabol" },
-                { images: ["maiskaefer.jpg"], name: "Maiskäfer", development: "holometabol" },
-                { images: ["khaprakaefer.jpg"], name: "Khaprakäfer", development: "holometabol" },
-                { images: ["speisebohnenkaefer.jpg"], name: "Speisebohnenkäfer", development: "holometabol" },
-                { images: ["tabakkaefer.jpg"], name: "Tabakkäfer", development: "holometabol" },
-                { images: ["gemeiner_speckkaefer.jpg"], name: "Gemeiner Speckkäfer", development: "holometabol" },
-                { images: ["pelzkaefer.jpg"], name: "Pelzkäfer", development: "holometabol" },
-                { images: ["messingkaefer.jpg"], name: "Messingkäfer", development: "holometabol" },
-                { images: ["kugelkaefer.jpg"], name: "Kugelkäfer", development: "holometabol" },
-                { images: ["kraeuterdieb.jpg"], name: "Kräuterdieb", development: "holometabol" },
-                { images: ["moderkaefer.jpg"], name: "Moderkäfer", development: "holometabol" }
-            ],
-            Schaben: [
-                { images: ["deutsche_schabe.jpg"], name: "Deutsche Schabe", development: "hemimetabol" },
-                { images: ["orientalische_schabe.jpg"], name: "Orientalische Schabe", development: "hemimetabol" },
-                { images: ["amerikanische_schabe.jpg"], name: "Amerikanische Schabe", development: "hemimetabol" },
-                { images: ["braunbandschabe.jpg"], name: "Braunbandschabe", development: "hemimetabol" },
-                { images: ["australische_schabe.jpg"], name: "Australische Schabe", development: "hemimetabol" }
-            ],
-            Motten: [
-                { images: ["doerrobstmotte.jpg"], name: "Dörrobstmotte", development: "holometabol" },
-                { images: ["mehlmotte.jpg"], name: "Mehlmotte", development: "holometabol" },
-                { images: ["kleidermotte.jpg"], name: "Kleidermotte", development: "holometabol" },
-                { images: ["pelzmotte.jpg"], name: "Pelzmotte", development: "holometabol" }
-            ],
-            Fischchen: [
-                { images: ["silberfischchen.JPG"], name: "Silberfischchen", development: "ametabol" },
-                { images: ["papierfischchen.jpg"], name: "Papierfischchen", development: "ametabol" },
-                { images: ["ofenfischchen.jpg"], name: "Ofenfischchen", development: "ametabol" }
-            ],
-            Ameisen: [
-                { images: ["schwarze_wegameise.jpg"], name: "Schwarze Wegameise", development: "holometabol" },
-                { images: ["braune_wegameise.jpg"], name: "Braune Wegameise", development: "holometabol" },
-                { images: ["pharaoameise.jpg"], name: "Pharaoameise", development: "holometabol" }
-            ],
-            Wanzen: [
-                { images: ["feuerwanze.jpg"], name: "Feuerwanze", development: "hemimetabol" },
-                { images: ["kiefernzapfenwanze.jpg"], name: "Kiefernzapfenwanze", development: "hemimetabol" }
-            ],
-            FliegenUndMuecken: [
-                { images: ["stubenfliege.jpg"], name: "Stubenfliege", development: "holometabol" },
-                { images: ["schmeissfliege.jpg"], name: "Schmeißfliege", development: "holometabol" },
-                { images: ["fruchtfliege.jpg"], name: "Fruchtfliege", development: "holometabol" },
-                { images: ["hausmuecke.jpg"], name: "Hausmücke", development: "holometabol" },
-                { images: ["schmetterlingsmuecke.jpg"], name: "Schmetterlingsmücke", development: "holometabol" }
-            ],
-            Sonstige: [
-                { images: ["katzenfloh.jpg"], name: "Floh", development: "holometabol" },
-                { images: ["maeuseassel.jpg"], name: "Assel", development: "ametabol" },
-                { images: ["bettwanze.jpg"], name: "Bettwanze", development: "hemimetabol" },
-                { images: ["rote_vogelmilbe.jpg"], name: "Rote Vogelmilbe", development: "hemimetabol" },
-                { images: ["taubenzecke.jpg"], name: "Taubenzecke", development: "hemimetabol" },
-                { images: ["heimchen.jpg"], name: "Heimchen", development: "hemimetabol" }
-            ]
+          Wespen: [
+    { images: ["deutsche_wespe.jpg", "deutsche_wespe2.jpg", "deutsche_wespe3.jpg", "deutsche_wespe4.jpg"], name: "Deutsche Wespe", development: "holometabol" },
+    { images: ["gemeine_wespe.jpg", "gemeine_wespe2.jpg", "gemeine_wespe3.jpg", "gemeine_wespe4.jpg"], name: "Gemeine Wespe", development: "holometabol" },
+    { images: ["Saechsische_wespe.jpg", "Saechsische_wespe2.jpg", "Saechsische_wespe3.jpg", "Saechsische_wespe4.jpg"], name: "Sächsische Wespe", development: "holometabol" },
+    { images: ["feldwespe.jpg", "feldwespe2.jpg", "feldwespe3.jpg", "feldwespe4.jpg"], name: "Feldwespe", development: "holometabol" },
+],
+           Käfer: [
+    { images: ["reismehlkaefer.jpg", "reismehlkaefer2.jpg", "reismehlkaefer3.jpg", "reismehlkaefer4.jpg"], name: "Reismehlkäfer", development: "holometabol" },
+    { images: ["brotkaefer.jpg", "brotkaefer2.jpg", "brotkaefer3.jpg", "brotkaefer4.jpg"], name: "Brotkäfer", development: "holometabol" },
+    { images: ["mehlkaefer.jpg", "mehlkaefer2.jpg", "mehlkaefer3.jpg", "mehlkaefer4.jpg"], name: "Mehlkäfer", development: "holometabol" },
+    { images: ["getreideplattkaefer.jpg", "getreideplattkaefer2.jpg", "getreideplattkaefer3.jpg", "getreideplattkaefer4.jpg"], name: "Getreideplattkäfer", development: "holometabol" },
+    { images: ["kornkaefer.jpg", "kornkaefer2.jpg", "kornkaefer3.jpg", "kornkaefer4.jpg"], name: "Kornkäfer", development: "holometabol" },
+    { images: ["reiskaefer.jpg", "reiskaefer2.jpg", "reiskaefer3.jpg", "reiskaefer4.jpg"], name: "Reiskäfer", development: "holometabol" },
+    { images: ["gemeiner_nagekaefer.jpg", "gemeiner_nagekaefer2.jpg", "gemeiner_nagekaefer3.jpg", "gemeiner_nagekaefer4.jpg"], name: "Gemeiner Nagekäfer", development: "holometabol" },
+    { images: ["wollkrautbluetenkaefer.jpg", "wollkrautbluetenkaefer2.jpg", "wollkrautbluetenkaefer3.jpg", "wollkrautbluetenkaefer4.jpg"], name: "Wollkrautblütenkäfer", development: "holometabol" },
+    { images: ["wollkrautbluetenkaefer_larve.jpg", "wollkrautbluetenkaefer_larve2.jpg", "wollkrautbluetenkaefer_larve3.jpg", "wollkrautbluetenkaefer_larve4.jpg"], name: "Wollkrautblütenkäfer Larve", development: "holometabol" },
+    { images: ["hausbock.jpg", "hausbock2.jpg", "hausbock3.jpg", "hausbock4.jpg"], name: "Hausbock", development: "holometabol" },
+    { images: ["getreidekapuziner.jpg", "getreidekapuziner2.jpg", "getreidekapuziner3.jpg", "getreidekapuziner4.jpg"], name: "Getreidekapuziner", development: "holometabol" },
+    { images: ["maiskaefer.jpg", "maiskaefer2.jpg", "maiskaefer3.jpg", "maiskaefer4.jpg"], name: "Maiskäfer", development: "holometabol" },
+    { images: ["khaprakaefer.jpg", "khaprakaefer2.jpg", "khaprakaefer3.jpg", "khaprakaefer4.jpg"], name: "Khaprakäfer", development: "holometabol" },
+    { images: ["speisebohnenkaefer.jpg", "speisebohnenkaefer2.jpg", "speisebohnenkaefer3.jpg", "speisebohnenkaefer4.jpg"], name: "Speisebohnenkäfer", development: "holometabol" },
+    { images: ["tabakkaefer.jpg", "tabakkaefer2.jpg", "tabakkaefer3.jpg", "tabakkaefer4.jpg"], name: "Tabakkäfer", development: "holometabol" },
+    { images: ["gemeiner_speckkaefer.jpg", "gemeiner_speckkaefer2.jpg", "gemeiner_speckkaefer3.jpg", "gemeiner_speckkaefer4.jpg"], name: "Gemeiner Speckkäfer", development: "holometabol" },
+    { images: ["pelzkaefer.jpg", "pelzkaefer2.jpg", "pelzkaefer3.jpg", "pelzkaefer4.jpg"], name: "Pelzkäfer", development: "holometabol" },
+    { images: ["messingkaefer.jpg", "messingkaefer2.jpg", "messingkaefer3.jpg", "messingkaefer4.jpg"], name: "Messingkäfer", development: "holometabol" },
+    { images: ["kugelkaefer.jpg", "kugelkaefer2.jpg", "kugelkaefer3.jpg", "kugelkaefer4.jpg"], name: "Kugelkäfer", development: "holometabol" },
+    { images: ["kraeuterdieb.jpg", "kraeuterdieb2.jpg", "kraeuterdieb3.jpg", "kraeuterdieb4.jpg"], name: "Kräuterdieb", development: "holometabol" },
+    { images: ["moderkaefer.jpg", "moderkaefer2.jpg", "moderkaefer3.jpg", "moderkaefer4.jpg"], name: "Moderkäfer", development: "holometabol" }
+],
+           Schaben: [
+    { images: ["deutsche_schabe.jpg", "deutsche_schabe2.jpg", "deutsche_schabe3.jpg", "deutsche_schabe4.jpg"], name: "Deutsche Schabe", development: "hemimetabol" },
+    { images: ["orientalische_schabe.jpg", "orientalische_schabe2.jpg", "orientalische_schabe3.jpg", "orientalische_schabe4.jpg"], name: "Orientalische Schabe", development: "hemimetabol" },
+    { images: ["amerikanische_schabe.jpg", "amerikanische_schabe2.jpg", "amerikanische_schabe3.jpg", "amerikanische_schabe4.jpg"], name: "Amerikanische Schabe", development: "hemimetabol" },
+    { images: ["braunbandschabe.jpg", "braunbandschabe2.jpg", "braunbandschabe3.jpg", "braunbandschabe4.jpg"], name: "Braunbandschabe", development: "hemimetabol" },
+    { images: ["australische_schabe.jpg", "australische_schabe2.jpg", "australische_schabe3.jpg", "australische_schabe4.jpg"], name: "Australische Schabe", development: "hemimetabol" }
+],
+
+           Motten: [
+    { images: ["doerrobstmotte.jpg", "doerrobstmotte2.jpg", "doerrobstmotte3.jpg", "doerrobstmotte4.jpg"], name: "Dörrobstmotte", development: "holometabol" },
+    { images: ["mehlmotte.jpg", "mehlmotte2.jpg", "mehlmotte3.jpg", "mehlmotte4.jpg"], name: "Mehlmotte", development: "holometabol" },
+    { images: ["kleidermotte.jpg", "kleidermotte2.jpg", "kleidermotte3.jpg", "kleidermotte4.jpg"], name: "Kleidermotte", development: "holometabol" },
+    { images: ["pelzmotte.jpg", "pelzmotte2.jpg", "pelzmotte3.jpg", "pelzmotte4.jpg"], name: "Pelzmotte", development: "holometabol" }
+],
+Fischchen: [
+    { images: ["silberfischchen.JPG", "silberfischchen2.JPG", "silberfischchen3.JPG", "silberfischchen4.JPG"], name: "Silberfischchen", development: "ametabol" },
+    { images: ["papierfischchen.jpg", "papierfischchen2.jpg", "papierfischchen3.jpg", "papierfischchen4.jpg"], name: "Papierfischchen", development: "ametabol" },
+    { images: ["ofenfischchen.jpg", "ofenfischchen2.jpg", "ofenfischchen3.jpg", "ofenfischchen4.jpg"], name: "Ofenfischchen", development: "ametabol" }
+],
+
+           Ameisen: [
+    { images: ["schwarze_wegameise.jpg", "schwarze_wegameise2.jpg", "schwarze_wegameise3.jpg", "schwarze_wegameise4.jpg"], name: "Schwarze Wegameise", development: "holometabol" },
+    { images: ["braune_wegameise.jpg", "braune_wegameise2.jpg", "braune_wegameise3.jpg", "braune_wegameise4.jpg"], name: "Braune Wegameise", development: "holometabol" },
+    { images: ["pharaoameise.jpg", "pharaoameise2.jpg", "pharaoameise3.jpg", "pharaoameise4.jpg"], name: "Pharaoameise", development: "holometabol" }
+],
+Wanzen: [
+    { images: ["feuerwanze.jpg", "feuerwanze2.jpg", "feuerwanze3.jpg", "feuerwanze4.jpg"], name: "Feuerwanze", development: "hemimetabol" },
+    { images: ["kiefernzapfenwanze.jpg", "kiefernzapfenwanze2.jpg", "kiefernzapfenwanze3.jpg", "kiefernzapfenwanze4.jpg"], name: "Kiefernzapfenwanze", development: "hemimetabol" }
+],
+FliegenUndMuecken: [
+    { images: ["stubenfliege.jpg", "stubenfliege2.jpg", "stubenfliege3.jpg", "stubenfliege4.jpg"], name: "Stubenfliege", development: "holometabol" },
+    { images: ["schmeissfliege.jpg", "schmeissfliege2.jpg", "schmeissfliege3.jpg", "schmeissfliege4.jpg"], name: "Schmeißfliege", development: "holometabol" },
+    { images: ["fruchtfliege.jpg", "fruchtfliege2.jpg", "fruchtfliege3.jpg", "fruchtfliege4.jpg"], name: "Fruchtfliege", development: "holometabol" },
+    { images: ["hausmuecke.jpg", "hausmuecke2.jpg", "hausmuecke3.jpg", "hausmuecke4.jpg"], name: "Hausmücke", development: "holometabol" },
+    { images: ["schmetterlingsmuecke.jpg", "schmetterlingsmuecke2.jpg", "schmetterlingsmuecke3.jpg", "schmetterlingsmuecke4.jpg"], name: "Schmetterlingsmücke", development: "holometabol" }
+],
+Sonstige: [
+    { images: ["katzenfloh.jpg", "katzenfloh2.jpg", "katzenfloh3.jpg", "katzenfloh4.jpg"], name: "Floh", development: "holometabol" },
+    { images: ["maeuseassel.jpg", "maeuseassel2.jpg", "maeuseassel3.jpg", "maeuseassel4.jpg"], name: "Assel", development: "ametabol" },
+    { images: ["bettwanze.jpg", "bettwanze2.jpg", "bettwanze3.jpg", "bettwanze4.jpg"], name: "Bettwanze", development: "hemimetabol" },
+    { images: ["rote_vogelmilbe.jpg", "rote_vogelmilbe2.jpg", "rote_vogelmilbe3.jpg", "rote_vogelmilbe4.jpg"], name: "Rote Vogelmilbe", development: "hemimetabol" },
+    { images: ["taubenzecke.jpg", "taubenzecke2.jpg", "taubenzecke3.jpg", "taubenzecke4.jpg"], name: "Taubenzecke", development: "hemimetabol" },
+    { images: ["heimchen.jpg", "heimchen2.jpg", "heimchen3.jpg", "heimchen4.jpg"], name: "Heimchen", development: "hemimetabol" }
+]
           };
 
     let shuffledCategories = [];
