--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
     { images: ["doerrobstmotte.jpg", "doerrobstmotte2.jpg", "doerrobstmotte3.jpg", "doerrobstmotte4.jpg"], name: "Dörrobstmotte", development: "holometabol" },
     { images: ["mehlmotte.jpg", "mehlmotte2.jpg", "mehlmotte3.jpg", "mehlmotte4.jpg"], name: "Mehlmotte", development: "holometabol" },
     { images: ["kleidermotte.jpg", "kleidermotte2.jpg", "kleidermotte3.jpg", "kleidermotte4.jpg"], name: "Kleidermotte", development: "holometabol" },
-    { images: ["pelzmotte.jpg", "pelzmotte2.jpg", "pelzmotte3.jpg", "pelzmotte4.jpg"], name: "Pelzmotte", development: "holometabol" }
 ],
 Fischchen: [
     { images: ["silberfischchen.JPG", "silberfischchen2.JPG", "silberfischchen3.JPG", "silberfischchen4.JPG"], name: "Silberfischchen", development: "ametabol" },
@@ -171,7 +170,7 @@ FliegenUndMuecken: [
 ],
 Sonstige: [
     { images: ["katzenfloh.jpg", "katzenfloh2.jpg", "katzenfloh3.jpg", "katzenfloh4.jpg"], name: "Floh", development: "holometabol" },
-    { images: ["maeuseassel.jpg", "maeuseassel2.jpg", "maeuseassel3.jpg", "maeuseassel4.jpg"], name: "Assel", development: "ametabol" },
+    { images: ["assel.jpg", "assel2.jpg", "assel3.jpg", "assel4.jpg"], name: "Assel", development: "ametabol" },
     { images: ["bettwanze.jpg", "bettwanze2.jpg", "bettwanze3.jpg", "bettwanze4.jpg"], name: "Bettwanze", development: "hemimetabol" },
     { images: ["rote_vogelmilbe.jpg", "rote_vogelmilbe2.jpg", "rote_vogelmilbe3.jpg", "rote_vogelmilbe4.jpg"], name: "Rote Vogelmilbe", development: "hemimetabol" },
     { images: ["taubenzecke.jpg", "taubenzecke2.jpg", "taubenzecke3.jpg", "taubenzecke4.jpg"], name: "Taubenzecke", development: "hemimetabol" },
