--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           Wespen: [
     { images: ["deutsche_wespe.jpg", "deutsche_wespe2.jpg", "deutsche_wespe3.jpg", "deutsche_wespe4.jpg"], name: "Deutsche Wespe", development: "holometabol" },
     { images: ["gemeine_wespe.jpg", "gemeine_wespe2.jpg", "gemeine_wespe3.jpg", "gemeine_wespe4.jpg"], name: "Gemeine Wespe", development: "holometabol" },
-    { images: ["Saechsische_wespe.jpg", "Saechsische_wespe2.jpg", "Saechsische_wespe3.jpg", "Saechsische_wespe4.jpg"], name: "Sächsische Wespe", development: "holometabol" },
+    { images: ["saechsische_wespe.jpg", "saechsische_wespe2.jpg", "saechsische_wespe3.jpg", "saechsische_wespe4.jpg"], name: "Sächsische Wespe", development: "holometabol" },
     { images: ["feldwespe.jpg", "feldwespe2.jpg", "feldwespe3.jpg", "feldwespe4.jpg"], name: "Feldwespe", development: "holometabol" },
 ],
            Käfer: [
