--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     { images: ["kleidermotte.jpg", "kleidermotte2.jpg", "kleidermotte3.jpg", "kleidermotte4.jpg"], name: "Kleidermotte", development: "holometabol" },
 ],
 Fischchen: [
-    { images: ["silberfischchen.JPG", "silberfischchen2.JPG", "silberfischchen3.JPG", "silberfischchen4.JPG"], name: "Silberfischchen", development: "ametabol" },
+    { images: ["silberfischchen.JPG", "silberfischchen2.jpg", "silberfischchen3.jpg", "silberfischchen4.jpg"], name: "Silberfischchen", development: "ametabol" },
     { images: ["papierfischchen.jpg", "papierfischchen2.jpg", "papierfischchen3.jpg", "papierfischchen4.jpg"], name: "Papierfischchen", development: "ametabol" },
     { images: ["ofenfischchen.jpg", "ofenfischchen2.jpg", "ofenfischchen3.jpg", "ofenfischchen4.jpg"], name: "Ofenfischchen", development: "ametabol" }
 ],
