--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Fischchen: [
 ],
 Wanzen: [
     { images: ["feuerwanze.jpg", "feuerwanze2.jpg", "feuerwanze3.jpg", "feuerwanze4.jpg"], name: "Feuerwanze", development: "hemimetabol" },
-    { images: ["kiefernzapfenwanze.jpg", "kiefernzapfenwanze2.jpg", "kiefernzapfenwanze3.jpg", "kiefernzapfenwanze4.jpg"], name: "Kiefernzapfenwanze", development: "hemimetabol" }
+    { images: ["kiefernzapfenwanze.jpg", "kiefernzapfenwanze2.JPG", "kiefernzapfenwanze3.jpg", "kiefernzapfenwanze4.jpg"], name: "Kiefernzapfenwanze", development: "hemimetabol" }
 ],
 FliegenUndMuecken: [
     { images: ["stubenfliege.jpg", "stubenfliege2.jpg", "stubenfliege3.jpg", "stubenfliege4.jpg"], name: "Stubenfliege", development: "holometabol" },
