--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     { images: ["deutsche_wespe.jpg", "deutsche_wespe2.jpg", "deutsche_wespe3.jpg", "deutsche_wespe4.jpg"], name: "Deutsche Wespe", development: "holometabol" },
     { images: ["gemeine_wespe.jpg", "gemeine_wespe2.jpg", "gemeine_wespe3.jpg", "gemeine_wespe4.jpg"], name: "Gemeine Wespe", development: "holometabol" },
     { images: ["saechsische_wespe.jpg", "saechsische_wespe2.jpg", "saechsische_wespe3.jpg", "saechsische_wespe4.jpg"], name: "Sächsische Wespe", development: "holometabol" },
-    { images: ["feldwespe.jpg", "feldwespe2.jpg", "feldwespe3.jpg", "feldwespe4.jpg"], name: "Feldwespe", development: "holometabol" },
+    { images: ["feldwespe.jpg", "feldwespe2.jpeg", "feldwespe3.jpeg", "feldwespe4.jpeg"], name: "Feldwespe", development: "holometabol" },
 ],
            Käfer: [
     { images: ["reismehlkaefer.jpg", "reismehlkaefer2.jpg", "reismehlkaefer3.jpg", "reismehlkaefer4.jpg"], name: "Reismehlkäfer", development: "holometabol" },
