--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Wanzen: [
 ],
 FliegenUndMuecken: [
     { images: ["stubenfliege.jpg", "stubenfliege2.jpg", "stubenfliege3.jpg", "stubenfliege4.jpg"], name: "Stubenfliege", development: "holometabol" },
-    { images: ["schmeissfliege.jpg", "schmeissfliege2.jpg", "schmeissfliege3.jpg", "schmeissfliege4.jpg"], name: "Schmeißfliege", development: "holometabol" },
+    { images: ["schmeissfliege.jpg", "schmeißfliege2.jpg", "schmeißfliege3.jpg", "schmeißfliege4.jpg"], name: "Schmeißfliege", development: "holometabol" },
     { images: ["fruchtfliege.jpg", "fruchtfliege2.jpg", "fruchtfliege3.jpg", "fruchtfliege4.jpg"], name: "Fruchtfliege", development: "holometabol" },
     { images: ["hausmuecke.jpg", "hausmuecke2.jpg", "hausmuecke3.jpg", "hausmuecke4.jpg"], name: "Hausmücke", development: "holometabol" },
     { images: ["schmetterlingsmuecke.jpg", "schmetterlingsmuecke2.jpg", "schmetterlingsmuecke3.jpg", "schmetterlingsmuecke4.jpg"], name: "Schmetterlingsmücke", development: "holometabol" }
