--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
            Motten: [
     { images: ["doerrobstmotte.jpg", "doerrobstmotte2.jpg", "doerrobstmotte3.jpg", "doerrobstmotte4.jpg"], name: "Dörrobstmotte", development: "holometabol" },
     { images: ["mehlmotte.jpg", "mehlmotte2.jpg", "mehlmotte3.jpg", "mehlmotte4.jpg"], name: "Mehlmotte", development: "holometabol" },
-    { images: ["kleidermotte.jpg", "kleidermotte2.jpg", "kleidermotte3.jpg", "kleidermotte4.jpg"], name: "Kleidermotte", development: "holometabol" },
+    { images: ["kleidermotte.jpg", "kleidermotte2.jpg", "kleidermotte3.JPG", "kleidermotte4.jpg"], name: "Kleidermotte", development: "holometabol" },
 ],
 Fischchen: [
     { images: ["silberfischchen.JPG", "silberfischchen2.jpg", "silberfischchen3.jpg", "silberfischchen4.jpg"], name: "Silberfischchen", development: "ametabol" },
