--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     { images: ["speisebohnenkaefer.jpg", "speisebohnenkaefer2.jpg", "speisebohnenkaefer3.jpg", "speisebohnenkaefer4.jpg"], name: "Speisebohnenkäfer", development: "holometabol" },
     { images: ["tabakkaefer.jpg", "tabakkaefer2.jpg", "tabakkaefer3.jpg", "tabakkaefer4.jpg"], name: "Tabakkäfer", development: "holometabol" },
     { images: ["gemeiner_speckkaefer.jpg", "gemeiner_speckkaefer2.jpg", "gemeiner_speckkaefer3.jpg", "gemeiner_speckkaefer4.jpg"], name: "Gemeiner Speckkäfer", development: "holometabol" },
-    { images: ["pelzkaefer.jpg", "pelzkaefer2.jpg", "pelzkaefer3.jpg", "pelzkaefer4.jpg"], name: "Pelzkäfer", development: "holometabol" },
+    { images: ["pelzkaefer.jpg", "pelzkaefer2.JPG", "pelzkaefer3.jpg", "pelzkaefer4.jpg"], name: "Pelzkäfer", development: "holometabol" },
     { images: ["messingkaefer.jpg", "messingkaefer2.jpg", "messingkaefer3.jpg", "messingkaefer4.jpg"], name: "Messingkäfer", development: "holometabol" },
     { images: ["kugelkaefer.jpg", "kugelkaefer2.jpg", "kugelkaefer3.jpg", "kugelkaefer4.jpg"], name: "Kugelkäfer", development: "holometabol" },
     { images: ["kraeuterdieb.jpg", "kraeuterdieb2.jpg", "kraeuterdieb3.jpg", "kraeuterdieb4.jpg"], name: "Kräuterdieb", development: "holometabol" },
