--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Sonstige: [
     { images: ["assel.jpg", "assel2.jpg", "assel3.jpg", "assel4.jpg"], name: "Assel", development: "ametabol" },
     { images: ["bettwanze.jpg", "bettwanze2.jpg", "bettwanze3.jpg", "bettwanze4.jpg"], name: "Bettwanze", development: "hemimetabol" },
     { images: ["rote_vogelmilbe.jpg", "rote_vogelmilbe2.jpg", "rote_vogelmilbe3.jpg", "rote_vogelmilbe4.jpg"], name: "Rote Vogelmilbe", development: "hemimetabol" },
-    { images: ["taubenzecke.jpg", "taubenzecke2.jpg", "taubenzecke3.jpg", "taubenzecke4.jpg"], name: "Taubenzecke", development: "hemimetabol" },
+    { images: ["taubenzecke.jpg", "taubenzecke2.jpg", "taubenzecke3.jpg", "taubenzecke4.jpeg"], name: "Taubenzecke", development: "hemimetabol" },
     { images: ["heimchen.jpg", "heimchen2.jpg", "heimchen3.jpg", "heimchen4.jpg"], name: "Heimchen", development: "hemimetabol" }
 ]
           };
