--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -354,5 +354,11 @@ function checkAnswer(selectedAnswer) {
 
         startGame();
     </script>
+    <script>
+  window.onload = function() {
+    alert("⚠️ Diese Seite ist noch in Arbeit!");
+  };
+</script>
+
 </body>
 </html>
